# esp32-wt32-display

./: .gitignore  CMakeLists.txt  sdkconfig  tool.py
components/: manager.hpp
components/BLE_lib/: CMakeLists.txt  ble_server_lib.c  ble_server_lib.h
components/LovyanGFX/examples/Advanced/LVGL_PlatformIO/src/: lv_conf.h
components/lvgl/src/: lv_conf_internal.h
components/lvgl/src/core/: lv_obj_style.h
components/lvgl/src/extra/libs/png/: lv_png.c
components/lvgl/src/font/: lv_font.mk
components/lvgl/src/widgets/: lv_img.c
components/speaker_ns4168_i2s/: CMakeLists.txt  sound.c  speaker_ns4168.c  speaker_ns4168.h
components/ui_ux/: CMakeLists.txt
components/ui_ux/events/: gui_events.hpp  tux_events.hpp
components/ui_ux/guider/: arc.hpp  img.hpp  label.hpp  setup.hpp
components/ui_ux/helpers/: helper_display.hpp  helper_sntp.hpp
components/utils/: CMakeLists.txt  utils.c  utils.h
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.cpp
partitions/: partition-4MB.csv  partition-8MB.csv
